# DFSimulatorC

./: README.md  pushgit
Source Codes/Assets/Shaders/: FlatModel.fs  FlatModel.vs  TexturedModel.fs
Source Codes/Assets/Shaders/CollisionLoopsLighting/: FlatModel.fs  FlatModel.vs  LitTexturedModel.fs  LitTexturedModel.vs  TexturedModel.vs
Source Codes/C++/: ch2-main-example2.cpp  ch2-main-example3.cpp  ch2-main-example4.cpp
Source Codes/C++/C++ Basic/Binary to Decimal to Hexadecimal Conversion (Manual NOT WORKING)/: main.cpp
Source Codes/C++/C++ Basic/Bitwise Operations/: main.cpp
Source Codes/C++/C++ Basic/Decimal to Binary Conversion/: main.cpp
Source Codes/C++/C++ Basic/Decimal to Binary Conversion (Manual)/: main.cpp
Source Codes/C++/C++ Basic/Decimal to Hexadecimal Conversion/: main.cpp
Source Codes/C++/C++ Basic/Decimal to Hexadecimal Conversion (Manual)/: main.cpp
Source Codes/C++/C++ Basic/Get Date and Time/: main.cpp
Source Codes/C++/C++ Basic/Measuring Time of a Function/: main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/Armadillo/: Makefile  armadillo  main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/Boost/Autodiff/: main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/Boost/Autodiff for Simple Function/: main  main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/Boost/Black Scholes Option Pricing/: main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/C++ Gnuplot/2D Plot 2 Equations/: main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/C++ Gnuplot/3D Splot/: main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/GiNaC/: ginac  main  main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/OpenGL Rotate 3D Object Model/: About  Makefile  load_model_meshes.h  main.cpp  shader_configure.h  shader_glsl.frag  shader_glsl.vert
Source Codes/C++/C+++ Gnuplot SymbolicC++/Simulation/game_of_life-master/: CMakeLists.txt  README.md  cells_grid.cpp  cells_grid.h  main.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/SymbolicC++/: SymbolicC++  derivation.cpp  integral.cpp  integral2.cpp  integration.cpp  main.cpp  result  symbolicmatrixinverse.cpp  symbolicmatrixinverse2.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/Test it January 12 2024/: Eigen (copie 2)  QRDecomposition  QRDecomposition (copie 1)  SVD  SVD (copie 1)
Source Codes/C++/C+++ Gnuplot SymbolicC++/ch23-Numerical Linear Algebra/: multiplicationofmatrices.cpp
Source Codes/C++/C+++ Gnuplot SymbolicC++/ch26-Complex Numbers/: complex c++
Source Codes/C++/DianFreya-Bullet/Gravity and 3 Bodies/: Camera.h  LightRenderer.h  MeshRenderer.cpp  TextureLoader.cpp
Source Codes/C++/DianFreya-box2d-testbed/: CMakeLists.txt
Source Codes/C++/DianFreya-box2d-testbed/tests/: angular_oscillator.cpp  centerofmass_airplaneexplosion.cpp  centerofmass_atomicbomb.cpp  centerofmass_bulletshotupward.cpp  centerofmass_elasticcollisionsteelball.cpp  centerofmass_elasticcollisiontwoballs.cpp  centerofmass_racecarwallcollision.cpp  centerofmass_speedamplifier.cpp  centerofmass_speeddeamplifier.cpp  centerofmass_threeparticles.cpp  circular_motion.cpp  circular_motionairplane.cpp  circular_motionbox.cpp  conservationofenergy_blockslidestohigherlevel.cpp  conservationofenergy_elevatorsnaps.cpp  conservationofenergy_particleslidestillstop.cpp  distance_joint.cpp  dragforce_skier.cpp  frictional_forces.cpp  gases_container.cpp  gravity_check.cpp  kineticenergy_collision.cpp  kineticenergy_work.cpp  newton_firstlaw.cpp  newton_firstlaw2dforces.cpp  potentialenergy_looptheloop.cpp  potentialenergy_marblespringgun.cpp  potentialenergy_runawaytruck.cpp  potentialenergy_springincline.cpp  potentialenergy_verticalspringupward.cpp  projectile_dropped.cpp  projectile_motion.cpp  pulley_jointtriangle.cpp  pulley_kineticfriction.cpp  simple_pendulum.cpp  spring_test.cpp  spring_twomasses.cpp  spring_work.cpp  stir_liquid.cpp  test.cpp  (+7 more)
Source Codes/C++/OpenGL Texture with STB Image/: Makefile  main.cpp
Source Codes/C++/ch2-example5-Render Mesh with Lighting/: CMakeLists.txt  Camera.cpp  Camera.h  LightRenderer.cpp  LightRenderer.h  Mesh.cpp  Mesh.h  ShaderLoader.cpp  ShaderLoader.h  main.cpp
Source Codes/C++/ch2-example6-Cube and Moving Camera/: CMakeLists.txt  camera.fs  main.cpp
Source Codes/C++/ch2-example7-Yaw Pitch Roll for 3D Cube/: main.cpp  vertShader.glsl
Source Codes/C++/ch4-CMake example-Simple Triangle/: CMakeLists.txt  main.cpp
Source Codes/C++/ch5-box2d-helloworld/: CMakeLists.txt  main.cpp
Source Codes/C++/chxx-gravity-Bullet and 3 Bodies/: CMakeLists.txt  Mesh.h  MeshRenderer.h  main.cpp
Source Codes/Gnuplot/: 2dparametriccomplexfunctionplot  2dpolarcomplexfunctionplot  3dcomplex4throot-imaginarypart-plot  3dcomplex4throot-realpart-plot  3dcomplexfunctionplot  3dparametricplot-kleinbottle  3dparametricplot-moebiusstrip  contourplot  cumulativedistributionfunction-normal  data  histogramplot  histogramplot0  parametricplot  parametricplotsphere  pendulumdata  phaseplane  probabilitydensityfunction-normal  vectorfieldplot  vectorfieldplot1  vectorfieldplot2  vectorfieldplot3  vectorfieldplot3d
Source Codes/Julia/: ch11-riemannintegral.jl  ch23-2dplotimplicitequation2ellipses.jl  ch23-2dplotimplicitequation2ellipses1circle.jl  ch23-2dplotimplicitequationellipse.jl  ch3-linalg-vectoradd.jl  ch3-linalg-vectordotproduct.jl  ch3-linalg-vectornorm.jl  ch3-linalg-vectorsubtraction.jl  ch5-1-gravitydiffeq.jl  springmassfrictiondiffeq.jl
Source Codes/Libraries/: Install Notes
Source Codes/Libraries/GLAD/: glad.c
Source Codes/Libraries/reactphysics3d/test/: Test.cpp
Source Codes/include/: root_directory.h
Source Codes/include/glad/: glad.h
(+504 files in other folders)
